add getBooks functionality
